--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -18,7 +18,8 @@
     <li><a href="demo5/text-on-path_org.html">Text on Path</a></li>
     <li><a href="demo6/accelerometer_org.html">Accelerometer</a></li>
     <li><a href="demo7/anchors_org.html">Transform anchors</a></li>
-    <li><a href="demo8/hierarchy_org.html">Transform hierarchy</a></li>
+    <li><a href="demo8/hierarchy_org.html">Hierarchy</a></li>
+    <li><a href="demo26/hierarchy2.html">Hierarchy II</a></li>
     <li><a href="demo9/behaviors_org.html">Interactivity</a></li>
     <li><a href="demo10/garden_org.html">Procedural Grass</a></li>
     <li><a href="demo11/circles_org.html">Collision detection</a></li>
@@ -36,6 +37,7 @@
     <li><a href="demo23/actionTo.html">Action To</a></li>
     <li><a href="demo24/path.html">Path compositing</a></li>
     <li><a href="demo25/flipcards.html">Flip cards</a></li>
+    <li><a href="demo27/font.html">CAAT.Font</a></li>
 
 </ul>
 
