Added demo 28. Fixed some texts from demo 26 and 27.

--- a/documentation/demos/demo26/hierarchy2.html
+++ b/documentation/demos/demo26/hierarchy2.html
@@ -24,7 +24,7 @@
             </div>
             <div id="experiment">
                 <div style="text-align:center">
-                    <h1>Hierarchical affine transforms</h1>
+                    <h1>Hierarchy II</h1>
                 </div>
                 <div id="experiment-holder">
                 </div>
