--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -39,6 +39,7 @@
     <li><a href="../demo24/path.html">Path compositing</a></li>
     <li><a href="../demo25/flipcards.html">Flip cards</a></li>
     <li><a href="../demo27/font.html">CAAT.Font</a></li>
+    <li><a href="../demo28/paint.html">Paint</a></li>
 </ul>
        
 <h1>Tutorial</h1>
