--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -11,14 +11,15 @@
 <body>
 <h1>Demos</h1>
 <ul>
-    <li><a href="demo1/path_org.html">Path traversal</a></li>
+    <li><a href="demo1/path_org.html">Path management</a></li>
     <li><a href="demo2/fishpond_org.html">Fish Pond</a></li>
     <li><a href="demo3/sprites_org.html">Sprites on Path</a></li>
     <li><a href="demo4/coordinates_org.html">Drag'n'Drop</a></li>
     <li><a href="demo5/text-on-path_org.html">Text on Path</a></li>
     <li><a href="demo6/accelerometer_org.html">Accelerometer</a></li>
     <li><a href="demo7/anchors_org.html">Transform anchors</a></li>
-    <li><a href="demo8/hierarchy_org.html">Transform hierarchy</a></li>
+    <li><a href="demo8/hierarchy_org.html">Hierarchy</a></li>
+    <li><a href="demo26/hierarchy2.html">Hierarchy II</a></li>
     <li><a href="demo9/behaviors_org.html">Interactivity</a></li>
     <li><a href="demo10/garden_org.html">Procedural Grass</a></li>
     <li><a href="demo11/circles_org.html">Collision detection</a></li>
@@ -34,7 +35,10 @@
     <li><a href="demo21/vvv.html">Tiles Engine</a></li>
     <li><a href="demo22/multitouch.html">Multitouch</a></li>
     <li><a href="demo23/actionTo.html">Action To</a></li>
-    <li><a href="demo24/path.html">Path creation</a></li>
+    <li><a href="demo24/path.html">Path compositing</a></li>
+    <li><a href="demo25/flipcards.html">Flip cards</a></li>
+    <li><a href="demo27/font.html">CAAT.Font</a></li>
+    <li><a href="demo28/paint.html">Paint</a></li>
 
 </ul>
 
