--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <a href="documentation/demos/demo6/accelerometer_org.html"><img class="image_h" src="thumbs/demo6.png" alt="accelerometer input"></a>
             <a href="documentation/demos/demo7/anchors_org.html"><img class="image_h" src="thumbs/demo7.png" alt="Actor anchors"></a>
             <a href="documentation/demos/demo8/hierarchy_org.html"><img class="image_h" src="thumbs/demo8.png" alt="Hierarchical rotations"></a>
+            <a href="documentation/demos/demo26/hierarchy2.html"><img class="image_h" src="thumbs/demo26.png" alt="Hierarchy II"></a>
             <a href="documentation/demos/demo9/behaviors_org.html"><img class="image_h" src="thumbs/demo9.png" alt="Some actor behaviors"></a>
             <a href="documentation/demos/demo10/garden_org.html"><img class="image_h" src="thumbs/demo10.png" alt="Procedural grass"></a>
             <a href="documentation/demos/demo11/circles_org.html"><img class="image_h" src="thumbs/demo11.png" alt="Circles collision"></a>
@@ -86,6 +87,9 @@
             <a href="documentation/demos/demo22/multitouch.html"><img class="image_h" src="thumbs/demo22.png" alt="Multitouch test"></a>
             <a href="documentation/demos/demo23/actionTo.html"><img class="image_h" src="thumbs/demo23.png" alt="Action To"></a>
             <a href="documentation/demos/demo24/path.html"><img class="image_h" src="thumbs/demo24.png" alt="Path Creation"></a>
+            <a href="documentation/demos/demo25/flipcards.html"><img class="image_h" src="thumbs/demo25.png" alt="Flip cards"></a>
+            <a href="documentation/demos/demo27/font.html"><img class="image_h" src="thumbs/demo27.png" alt="Fonts"></a>
+            <a href="documentation/demos/demo28/paint.html"><img class="image_h" src="thumbs/demo28.png" alt="Paint demo"></a>
 
         </div>
 
