--- a/documentation/demos/demo28/paint.html
+++ b/documentation/demos/demo28/paint.html
@@ -38,21 +38,7 @@
                 <div>
                     <p>Controls:</p>
                     <ul>
-                        <li>Drag path handles.</li>
-                    </ul>
-                </div>
-                <div>
-                    <p>
-                        This demo features the following elements:
-                    </p>
-                    <ul>
-                        <li>Constructing a Path and adding segments to it.</li>
-                        <li>Showing a path by associating it to a PathActor.</li>
-                        <li>Sprited fonts as text with TextActor.</li>
-                        <li>Path management by calling setInteractive method.</li>
-                        <li>Setting up a TextActor.</li>
-                        <li>Setting a path for a TextActor</li>
-                        <li>CAAT.Interpolator on path behavior.</li>
+                        <li>Drag or touch eventss.</li>
                     </ul>
                 </div>
             </div>
